--- a/templates/hello.html
+++ b/templates/hello.html
@@ -13,7 +13,7 @@
     <div class="col-md-6 border border-dark ">
         <p>ログインはコチラ！</p>
         <p>{{.Message}}</p>
-        <form action="/login" method="post">
+        <form action="/login/" method="post">
             <div class="form-group">
                 <label for="account">メールアドレス</label>
             <input type="mail" class="form-control" id="account" name="account">
@@ -23,8 +23,7 @@
                 <input type="password" class="form-control" id="pass" name="pass">
             </div>
             <button type="submit" class="btn btn-primary">
-                Click
-            </button>
+                Click</button>
         </form>
     </div>
     <div class="col-md-6 border border-dark ">
