--- a/templates/hello.html
+++ b/templates/hello.html
@@ -27,7 +27,8 @@
         </form>
     </div>
     <div class="col-md-6 border border-dark ">
-    <a class="twitter-timeline" href="https://twitter.com/na0tit?ref_src=twsrc%5Etfw">Tweets by na0tit</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></body>
+    <a class="twitter-timeline" href="https://twitter.com/na0tit?ref_src=twsrc%5Etfw" width="600"
+height="600">Tweets by na0tit</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></body>
     </div>
 </div>
 </html>
