--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>Home</title>  
     
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
   <script>
     // Geolocation APIに対応している
     if (navigator.geolocation) {
@@ -12,37 +14,14 @@
       alert("この端末では位置情報が取得できません");
     }
 
-    // 現在地取得処理
-    function getPosition() {
-      // 現在地を取得
-      navigator.geolocation.getCurrentPosition(
-        // 取得成功した場合
-        function(position) {
-            alert("緯度:"+position.coords.latitude+",経度"+position.coords.longitude);
-        },
-        // 取得失敗した場合
-        function(error) {
-          switch(error.code) {
-            case 1: //PERMISSION_DENIED
-              alert("位置情報の利用が許可されていません");
-              break;
-            case 2: //POSITION_UNAVAILABLE
-              alert("現在位置が取得できませんでした");
-              break;
-            case 3: //TIMEOUT
-              alert("タイムアウトになりました");
-              break;
-            default:
-              alert("その他のエラー(エラーコード:"+error.code+")");
-              break;
-          }
-        }
-      );
-    }
   </script>
-    <link rel="stylesheet" 
+<script src="/static/script/script.js"></script>
+  <link rel="stylesheet" 
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="../static/css/normalize.css">
+    <link rel="stylesheet" href="../static/css/main.css">
 </head>
 <body class="container">
     <h1 class="display-4 mb-4">Home</h1>
@@ -50,10 +29,49 @@
   <div class="row">
     <div class="col-md-6 border border-dark ">
     来店回数
+
+    <div id="visit-stamp">
+	<table>
+		<thead>
+			<tr>
+				<th colspan="5">アクセスして訪問スタンプを集めよう</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td><span>訪</span></td>
+				<td><span>訪</span></td>
+				<td><span>訪</span></td>
+				<td><span>訪</span></td>
+				<td><span>訪</span></td>
+			</tr>
+			<tr>
+				<td><span>訪</span></td>
+				<td><span>訪</span></td>
+				<td><span>訪</span></td>
+				<td><span>訪</span></td>
+				<td><span>訪</span></td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+<p id="visitnum"></p>
+<div id="reset">Cookieのリセット</div>
+
     </div>
     <div class="col-md-6 border border-dark ">
   <h1>位置情報取得サンプル</h1>
   <button onclick="getPosition();">位置情報を取得する</button>
     </div>
 </div>
+
+
+<!-- ======== footer ======== -->
+<footer>
+	<div class="container footer-container">
+		<p class="footer-copyright">© なおて党</p>
+	</div>
+</footer>
+<!-- ======== /footer ======== -->
+
 </html>
