タイトルを修正

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -8,7 +8,7 @@
 </head>
 <body class="container">
     <h1 class="display-4 mb-4">Naoteto's house portal</h1>
-    <p class="lead">★なおてとハウスのポータルサイトへようこそ★</p>
+    <p class="lead">★ポータルサイトへようこそ★</p>
   <div class="row">
     <div class="col-md-6 border border-dark ">
         <p>ログインはコチラ！</p>
